2.9.3 - 23/09/2015
Added:
- Default repositories file to allow editing urls
Fixed:
- Matching packages with case insensitive option
 
2.9.2 - 21/09/2015
Added:
- Clear screen in "--network" option
Updated:
- View doinst.sh in "--network" option if exist
- Commands in "--network" option
Fixed:
- Strange problem with node-0.12.7 - uname and rm commands not found. #43
- 0 package will be installed... Would you like to continue [y/N]? #44
- Matching packages with case insensitive option
- Build package without keep log file
- Some typos

2.9.1 - 18/09/2015
Added:
- Additional option "--deps" in removepkg option for remove dependencies
instead via configuration file
- Support ".tbz" and ".tlz" Slackware packages for auto detect option

2.9.0 - 18/09/2015
Added:
- Quit option in new-config command
Updated:
- Installation bash script
- Messages and references messages
- Image types for graph
- View SlackBuilds repository in option "-n, --network"
Fixed:
- Some typos
- Print package description

2.8.9 - 15/09/2015
Added:
- Additional option "--case-ins" case insensitive
Fixed:
- Dialog utility crash if exit with Esc key
Update:
- KeyboardInterrupt with signal

2.8.8 - 14/09/2015
Added:
- Additional option "--checklist" in "-n, --network" option
Fixed:
- Typo in help option
Updated:
- Optional dependencies
- "--network" view commands

2.8.7 - 11/09/2015
Fixed:
- Check remove dependencies if already installed

2.8.6 - 11/09/2015
Added:
- Read doinst.sh file in "--network" option
- Editor via configuration file
Updated:
- Rename script view.py in network.py

2.8.5 - 08/09/2015
Fixed:
- Remove packages with option "--checklist" and "--check-deps"

2.8.4 - 08/09/2015
Added:
- Additional option "--checklist" in option "--check" for upgrade packages
Updated:
- Slackware mirrors

2.8.3 - 07/09/2015
Added:
- Update package lists for repository 'slack' after upgrade distribution
- Reset slpkg configuration file in the default values
Fixed:
- pip install

2.8.2 - 04/09/2015
Updated: