@@ -1,6 +1,7 @@
 2.9.3 - 23/09/2015
 Added:
 - Default repositories file to allow editing urls
+- Additional option "--case-ins" case insensitive in "--tracking" option
 Fixed:
 - Matching packages with case insensitive option
  
